# FFmpegDzh

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/stormdzh/ffmpegdzh/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stormdzh/ffmpegdzh/: MainActivity.java  TestOpenGlesActivity.java  VideoActivity.java  VideoListActivity.java
app/src/main/java/com/stormdzh/ffmpegdzh/adapter/: VideoListAdapter.java
app/src/main/java/com/stormdzh/ffmpegdzh/entity/: VideoListEntity.java
app/src/main/java/com/stormdzh/ffmpegdzh/opgl/: WLGLSufurfaceView.java  WlPicRender.java  WlRender.java  WlShaderUtil.java
app/src/main/java/com/stormdzh/ffmpegdzh/util/: AppUtil.java  TimeUtil.java
app/src/main/res/layout/: activity_main.xml  activity_openelgs.xml  activity_video.xml  activity_video_list.xml  adapter_video_list.xml
app/src/main/res/raw/: vertex_pic_shader.glsl
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/stormdzh/ffmpegdzh/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libaudio/: CMakeLists.txt  build.gradle
libaudio/src/androidTest/java/com/stormdzh/libaudio/: ExampleInstrumentedTest.java
libaudio/src/main/: AndroidManifest.xml
libaudio/src/main/cpp/: AndroidLog.h  DzgCallJava.cpp  DzgCallJava.h  DzhAudio.cpp  DzhAudio.h  DzhBufferQueue.cpp  DzhBufferQueue.h  DzhCallJava.cpp  DzhCallJava.h  DzhFFmpeg.cpp  DzhFFmpeg.h  DzhMediaPlayer.cpp  DzhPcmBean.cpp  DzhPcmBean.h  DzhPlayState.cpp  DzhPlayState.h  DzhQueue.cpp  DzhQueue.h  DzhVideo.cpp  DzhVideo.h  JavaListener.cpp  JavaListener.h  TestSLES.cpp  TestSLES.h  WlAudio.cpp  WlAudio.h  WlBufferQueue.cpp  WlBufferQueue.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPcmBean.cpp  WlPcmBean.h  WlPlayState.cpp  WlPlayState.h  WlQueue.cpp  WlQueue.h  WlVideo.cpp  WlVideo.h  (+1 more)
libaudio/src/main/java/com/stormdzh/libaudio/util/: AudioMediaCodecUtil.java  DzhMediaPlayer.java  DzhVideoSupportUitl.java  MediaCodecUtil.java  MediaCodecVideo.java  OnPlayEventListener.java  PlayerPrepareListener.java  TestJni.java  WlVideoSupportUitl.java
libaudio/src/main/java/com/stormdzh/libaudio/util/opengl/: DzhGLSufurfaceView.java  DzhShaderUtil.java  DzhVideoRender.java  WLGLSufurfaceView.java  WlShaderUtil.java  WlVideoRender.java
libaudio/src/main/res/values/: strings.xml
libaudio/src/test/java/com/stormdzh/libaudio/: ExampleUnitTest.java
